kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: job-portal
  labels:
    app.kubernetes.io/name: job-portal
